[project]
name = "edm2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.2",
    "matplotlib>=3.11.0",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "psutil>=7.2.2",
    "pyspng>=0.1.4",
    "requests>=2.32.5",
    "scipy>=1.18.0",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.68.3",
]
